# Aeon-K12-cpuminer

./: CryptonightR_JIT.c  CryptonightR_JIT.h  CryptonightR_template.S  CryptonightR_template.h  Makefile.am  README.md  cpu-miner.c  cryptonight.h  cryptonight_aesni.c  cryptonight_common.c  cryptonight_lobotomized.c  k12.c  miner.h  mul128.h  util.c  variant4_random_math.h
crypto/: KangarooTwelve.h  c_keccak.c  oaes_lib.c  skein_port.h
crypto/Inplace32BI/: KeccakP-1600-inplace32BI.c
crypto/Optimized64/: KeccakP-1600-SnP.h  KeccakP-1600-opt64.c
